some divs amended to sematic html

--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,12 +22,12 @@
                     <a href="#social-media-marketing">Social Media Marketing!</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </section>
     <div class="hero"></div>
     <section class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization"> <class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,9 +36,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" 
-                alt="online-reputation-management">
-                class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -48,8 +46,7 @@
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" 
-                alt="social-media-marketing"> 
-                class="float-left" />
+                alt="social-media-marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizeable influence on buying habits. Social media marketing helps you
